--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,9 @@ byteorder = "1.3.1"
 rand = "0.8.4"
 p256 = "0.9.0"
 p384 = "0.8.0"
+qrcode = "0.14.1"
+image = "0.25.9"
+axum = "0.7"
+tokio = { version = "1", features = ["full"] }
+tower-http = { version = "0.5", features = ["fs"] }
+serde_json = "1.0"
