--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,3 +55,6 @@ axum = "0.7"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.5", features = ["fs"] }
 serde_json = "1.0"
+jsonwebtoken = "9.2"
+serde = { version = "1.0", features = ["derive"] }
+uuid = { version = "1.6", features = ["v1", "v4", "v5", "v7"] }
